--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,3 @@
 [context.branch-deploy]
   command = "env"
-  environment = {
-    NODE_ENV = "development"
-  }
+  environment = { NODE_ENV = "production" }
