--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@netlify/functions": "^1.0.0",
     "astro": "^0.20.7",
     "netlify-cli": "^10.3.1"
   }
