--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@netlify/functions": "^1.0.0",
     "astro": "^0.20.7",
     "netlify-cli": "^10.3.1"
+  },
+  "dependencies": {
+    "@netlify/functions": "^1.0.0",
+    "@types/node": "^14.18.20",
+    "typescript": "^4.7.2"
   }
 }
