--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,18 @@
 [functions.schedule]
   schedule = "@hourly"
+
+[[edge_functions]]
+  path = "/hello"
+  function = "hello"
+
+[[edge_functions]]
+  path = "/hello/*"
+  function = "hello"
+
+[[edge_functions]]
+  path = "/admin"
+  function = "admin"
+
+[[edge_functions]]
+  path = "/login"
+  function = "login"
