--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "@example/starter",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "postinstall": "cd ./netlify/functions/number2 && npm install"
   },
   "devDependencies": {
     "astro": "^0.20.7",
-    "netlify-cli": "^10.3.1"
+    "netlify-cli": "^10.10.2"
   },
   "dependencies": {
+    "@example/starter": "file:netlify/functions/number2",
     "@netlify/functions": "^1.0.0",
     "@types/node": "^14.18.20",
     "typescript": "^4.7.2"
