--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "postinstall": "cd ./netlify/functions/number2 && npm install"
+    "preview": "astro preview"
   },
   "devDependencies": {
     "astro": "^0.20.7",
@@ -18,6 +17,9 @@
     "@example/starter": "file:netlify/functions/number2",
     "@netlify/functions": "^1.0.0",
     "@types/node": "^14.18.20",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "next": "^12.2.1",
+    "@netlify/plugin-nextjs": "^4.11.1",
+    "@next/bundle-analyzer": "^12.2.0"
   }
 }
