--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,26 @@
+[build.environment]
+LALA = "LULU"
+
 [functions.schedule]
-  schedule = "@hourly"
+schedule = "@hourly"
 
 [[edge_functions]]
-  path = "/hello"
-  function = "hello"
+path = "/hello"
+function = "hello"
 
 [[edge_functions]]
-  path = "/hello/*"
-  function = "hello"
+path = "/hello/*"
+function = "hello"
 
 [[edge_functions]]
-  path = "/admin"
-  function = "admin"
+path = "/admin"
+function = "admin"
 
 [[edge_functions]]
-  path = "/login"
-  function = "login"
+path = "/login"
+function = "login"
+
+
+[[edge_functions]]
+function = "env"
+path = "/env"
