--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.20.7",
-    "netlify-cli": "^10.3.1"
+    "astro": "^0.20.7"
   },
   "dependencies": {
-    "@netlify/functions": "^1.0.0",
+    "@netlify/functions": "^1.2.0",
     "@types/node": "^14.18.20",
-    "typescript": "^4.7.2"
+    "typescript": "^4.8.4"
   }
 }
