--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@netlify/netlify-plugin-functions-bundling-config": "^2.0.0",
     "astro": "^0.20.7"
   },
   "dependencies": {
