--- a/netlify.toml
+++ b/netlify.toml
@@ -27,3 +27,7 @@ path = "/env"
 
 [[plugins]]
 package = "@netlify/netlify-plugin-functions-bundling-config"
+
+[functions]
+
+node_bundler = 'esbuild'
