--- a/netlify.toml
+++ b/netlify.toml
@@ -25,4 +25,5 @@ function = "error"
 function = "env"
 path = "/env"
 
-
+[[plugins]]
+package = "@netlify/netlify-plugin-functions-bundling-config"
