--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "traceroute edge.netlify.app"
+command = "apt-get install traceroute && traceroute edge.netlify.app"
 
 [build.environment]
 LALA = "LULU"
