--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "devDependencies": {
     "@netlify/netlify-plugin-functions-bundling-config": "2.1.0",
-    "astro": "^0.20.7"
+    "astro": "^1.7.1"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.1.0",
+    "@astrojs/sitemap": "^1.2.0",
     "@netlify/functions": "^1.2.0",
     "@types/node": "^14.18.20",
     "typescript": "^4.8.4"
