--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,7 @@ function = "hello"
 [[edge_functions]]
 path = "/hello/*"
 function = "hello"
+excludePattern = "^/hello/no$"
 
 [[edge_functions]]
 path = "/login"
