--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,7 @@ function = "hello"
 [[edge_functions]]
 path = "/hello/*"
 function = "hello"
+excludedPattern = "^/hello/no$"
 excludedPath = "/hello/nort"
 
 [[edge_functions]]
